[project]
name = "vpax"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "loguru>=0.7.2",
    "pandas>=2.2.3",
    "typer>=0.12.5",
]

[project.scripts]
hello = "vpax:hello"
vpax = "vpax.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
